--- a/test/functional/drm-player.html
+++ b/test/functional/drm-player.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width">
 
   <link rel="stylesheet" href="../../node_modules/video.js/dist/video-js/video-js.css">
-  <link rel="stylesheet" href="../../src/css/videojs-dash.css">
+  <link rel="stylesheet" href="../../src/js/videojs-dash.css">
 </head>
 <body>
   <video id="example-video" width=600 height=300 class="video-js vjs-default-skin" controls>
