force override buffer const

--- a/example-dist.html
+++ b/example-dist.html
@@ -8,7 +8,7 @@
     <link href="dist/videojs-dash.css" rel="stylesheet">
 
     <!-- video.js -->
-    <script src="node_modules/dashjs/dist/dash.all.js"></script>
+    <script src="node_modules/dashjs/dist/dash.debug.js"></script>
     <script src="node_modules/video.js/dist/video-js/video.dev.js"></script>
     <script src="dist/videojs-dash.js"></script>
 
