add metadata metrics

--- a/example-dist.html
+++ b/example-dist.html
@@ -45,7 +45,7 @@
        crossorigin
        controls>
     <source
-            src="http://origin.afrostream.tv/vod/FF_112_Afrostream_V2/98a76e65b74d03a8.ism/98a76e65b74d03a8.mpd"
+            src="http://yt-dash-mse-test.commondatastorage.googleapis.com/media/motion-20120802-manifest.mpd"
             type="application/dash+xml">
     <track src="https://afrostream-img.s3-eu-west-1.amazonaws.com/production/caption/2015/09/913ed362da38f821ed4b-vimeocom136679382.fr.vtt"
            kind="captions" srclang="fr" label="fr">
